--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
@@ -205,6 +205,7 @@
 						        	<button onClick="@command('deleteMailSendSelectedCmd')"
 										tooltiptext="${c:l('txt.ui.common.Delete')}"
 										sclass="btn-danger"
+										height="33px"
 										disabled="@load(empty(vm.mailSendSelectedList))"
 				        				iconSclass="z-icon-times" />
 				        			
@@ -215,68 +216,79 @@
 										value="@load(vm.mailSendFilterStrValue)"
 										mold="rounded"
 										readonly="true"
-										buttonVisible="true"
-										autodrop="true" 
-										popup="mailSendFilterPopup" >
-										<bandpopup height="min" width="460px" id="mailSendFilterPopup" >
-											<grid>
+										buttonVisible="false"
+										autodrop="true"
+										popup="mailSendSearchgPopup" >
+									</bandbox>
+									<popup height="min" hflex="1" style="max-width: 575px;" id="mailSendSearchgPopup" >
+										<vbox hflex="1" align="end">
+											<grid hflex="1">
 												<columns>
 													<column width="135px"/>
-													<column hflex="1"/>
+													<column hflex="1" align="right"/>
 												</columns>
 												<rows>
+													<row valign="top">
+														<label value="${c:l('txt.ui.Search')}" style="font-size: 16px;"/>
+														<button tooltiptext="${c:l('txt.ui.ToClose')}"
+									        				onClick="mailSendSearchgPopup.close()"
+									        				style="margin-bottom: 10px;"
+									        				iconSclass="z-icon-times"
+									        				dir="reverse"
+									        				height="33px"
+									        				sclass="btn-light" />
+													</row>
+													
 													<row>
 														<label value="${c:l('txt.ui.common.from')}"/>
-														<datebox value="@bind(vm.mailSendFilterFromDate)" 
-															readonly="true" 
-															hflex="1" />
+														<datebox value="@bind(vm.mailSendFilterFromDate)"
+															readonly="true" />
 													</row>
 													<row>
 														<label value="${c:l('txt.ui.common.to')}"/>
 														<datebox value="@bind(vm.mailSendFilterToDate)" 
-															readonly="true" 
-															hflex="1" />
+															readonly="true" />
 													</row>
 													<row>
 														<label value="${c:l('txt.ui.common.To')}"/>
 														<textbox value="@bind(vm.mailSendFilterMailTo)" 
-															onOK="@command('loadSendSelectedCmd', bandbox=mailSendFilter)" 
-															hflex="1" />
+															onOK="@command('loadSendSelectedCmd', popup=mailSendSearchgPopup)" 
+															width="100%" />
 													</row>
 													<row>
 														<label value="${c:l('txt.ui.common.Predmet')}"/>
 														<textbox value="@bind(vm.mailSendFilterMailSubject)" 
-															onOK="@command('loadSendSelectedCmd', bandbox=mailSendFilter)" 
-															hflex="1" />
+															onOK="@command('loadSendSelectedCmd', popup=mailSendSearchgPopup)" 
+															width="100%" />
 													</row>
 													<row>
 														<label value="${c:l('txt.ui.common.contentText')}"/>
 														<textbox value="@bind(vm.mailSendFilterMailText)" 
-															onOK="@command('loadSendSelectedCmd', bandbox=mailSendFilter)" 
-															hflex="1" />
-													</row>
-													<row>
-														<cell/>
-														<cell align="right">
-										        			<button label="${c:l('txt.ui.common.search')}"
-										        				iconSclass="z-icon-search"
-										        				onClick="@command('loadSendSelectedCmd', bandbox=mailSendFilter)" />
-															<button label="${c:l('txt.ui.common.CleanFilter')}"
-										        				onClick="@command('clearMailSendFilterCmd')"
-										        				style="margin-left: 5px;"
-										        				sclass="btn-light" />
-														</cell>
+															onOK="@command('loadSendSelectedCmd', popup=mailSendSearchgPopup)" 
+															width="100%" />
 													</row>
 												</rows>
 											</grid>
-										</bandpopup>
-									</bandbox>
+											<hlayout style="margin-top: 15px;">
+												<button label="${c:l('txt.ui.common.search')}"
+							        				iconSclass="z-icon-search"
+							        				height="33px"
+							        				onClick="@command('loadSendSelectedCmd', popup=mailSendSearchgPopup)" />
+												<button label="${c:l('txt.ui.common.CleanFilter')}"
+							        				onClick="@command('clearMailSendFilterCmd')"
+							        				style="margin-left: 5px;"
+							        				height="33px"
+							        				sclass="btn-light" />
+											</hlayout>
+										</vbox>
+									</popup>
 				        			
 						        	<!-- Refresh -->
 						        	<button tooltiptext="${c:l('txt.ui.common.copy.courseList.desc')}"
 				        				iconSclass="z-icon-refresh"
 				        				onClick="@command('loadSendSelectedCmd')"
-				        				style="margin-right: 5px;" />				        				
+				        				height="33px"
+				        				style="margin-left: 5px;" />				        				
 					        	</hbox>
 		        			</vbox>
 				        	<hbox spacing="0" hflex="1" >
@@ -351,14 +363,12 @@
 							            </listitem>
 							        </template>
 							    </listbox>
-							    							    							    
-							    <ckeditor hflex="1"
-							    	if="false"
-							    	height="475px"
-							    	value="@load(vm.mailSendSelected.text)"
-							    	customConfigurationsPath="/resources/js/ckeditor-readonly.js" >
-								</ckeditor>
-								
+							    
+								<ckeditor hflex="1"
+									height="475px"
+								    value="@load(vm.mailSendSelected.text)"
+								    customConfigurationsPath="/resources/js/ckeditor-readonly.js" >
+								</ckeditor>							
 			                </hbox>
 		                </vbox>
 			        </tabpanel>
