--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
@@ -47,7 +47,7 @@
 																style="margin-bottom: 2px; padding-left: 10px; padding-right: 0px;" 
 																onClick="@command('initMailToPopupCmd')" />
 															
-															<popup id="mailToPopupBtn" vflex="1" >
+															<popup id="mailToPopupBtn" vflex="1" hflex="1" style="max-width: 1095px;" >
 																<mail-recipient-selection hflex="1" vflex="1" />
 															</popup>
 														</vlayout>
@@ -100,7 +100,7 @@
 																iconSclass="z-icon-caret-down"
 																style="margin-bottom: 2px; padding-left: 10px; padding-right: 0px;"
 																onClick="@command('initMailCcPopupCmd')" />
-															<popup id="mailCcPopupBtn">
+															<popup id="mailCcPopupBtn" style="max-width: 1095px;">
 																<mail-recipient-selection hflex="1" />
 															</popup>
 														</vlayout>
@@ -223,22 +223,16 @@
 									<popup height="min" hflex="1" style="max-width: 575px;" id="mailSendSearchgPopup" >
 										<vbox hflex="1" align="end">
 											<grid hflex="1">
+												<auxhead>
+													<auxheader colspan="2">
+														<label value="${c:l('txt.ui.Search')}" style="font-size: 16px;"/>														
+													</auxheader>
+												</auxhead>
 												<columns>
 													<column width="135px"/>
 													<column hflex="1" align="right"/>
 												</columns>
 												<rows>
-													<row valign="top">
-														<label value="${c:l('txt.ui.Search')}" style="font-size: 16px;"/>
-														<button tooltiptext="${c:l('txt.ui.ToClose')}"
-									        				onClick="mailSendSearchgPopup.close()"
-									        				style="margin-bottom: 10px;"
-									        				iconSclass="z-icon-times"
-									        				dir="reverse"
-									        				height="33px"
-									        				sclass="btn-light" />
-													</row>
-													
 													<row>
 														<label value="${c:l('txt.ui.common.from')}"/>
 														<datebox value="@bind(vm.mailSendFilterFromDate)"
@@ -269,15 +263,19 @@
 													</row>
 												</rows>
 											</grid>
-											<hlayout style="margin-top: 15px;">
+											<hlayout style="margin-top: 15px;margin-bottom: 5px;">
 												<button label="${c:l('txt.ui.common.search')}"
 							        				iconSclass="z-icon-search"
-							        				height="33px"
 							        				onClick="@command('loadSendSelectedCmd', popup=mailSendSearchgPopup)" />
+												
 												<button label="${c:l('txt.ui.common.CleanFilter')}"
 							        				onClick="@command('clearMailSendFilterCmd')"
-							        				style="margin-left: 5px;"
-							        				height="33px"
+							        				style="margin-left: 10px;"
+							        				sclass="btn-light" />
+							        				
+							        			<button label="${c:l('txt.ui.ToClose')}"
+							        				onClick="mailSendSearchgPopup.close()"
+							        				style="margin-left: 10px;"
 							        				sclass="btn-light" />
 											</hlayout>
 										</vbox>
