--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
@@ -192,8 +192,7 @@
 										sclass="btn-light fix-btn-icon"
 						      			iconSclass="z-icon-trash"
 						      			style="margin-left: 10px;margin-bottom: 10px;" />
-								</hbox>
-																
+								</hbox>							
 				            </vlayout>
 			        </tabpanel>
 			        <tabpanel hflex="1">
@@ -321,12 +320,15 @@
 							            	align="right" />
 							        </listhead>
 							        <template name="model">
-							            <listitem onClick="@command('mailDetailOpenCmd', item=each)">
-							            	<listcell />
+							            <listitem>
+							            	<listcell/>
 							            	<listcell>
 							            		<vlayout>
 							            			<label value="${each.to}" style="font-size: 12px;"/>
-							            			<label value="${each.subject}" style="font-size: 12px;"/>
+							            			<label value="${each.subject}" 
+							            				style="font-size: 12px; text-decoration: underline !important"
+							            				onClick="@command('mailDetailOpenCmd', item=each)" 
+							            				popup="mailDetailPopup, position=after_start"/>
 							            		</vlayout>
 							            	</listcell>
 							            	<listcell>
@@ -361,17 +363,70 @@
 							            </listitem>
 							        </template>
 							    </listbox>
-							    
-								<ckeditor hflex="1"
-									height="475px"
-								    value="@load(vm.mailSendSelected.text)"
-								    customConfigurationsPath="/resources/js/ckeditor-readonly.js" >
-								</ckeditor>							
 			                </hbox>
 		                </vbox>
 			        </tabpanel>
 			    </tabpanels>
 			</tabbox>
 		</vlayout>
+		<!-- Mail detail popup  -->
+		<popup hflex="1"
+			vflex="1"
+			style="overflow:auto; max-width: 795px; max-height: 500px;"
+			id="mailDetailPopup" >
+			<vbox hflex="1" align="start">
+				<hbox hflex="1" pack="start" align="center" style="background: #F0F3F5; padding: 5px;">
+					<button tooltiptext="${c:l('txt.ui.ToClose')}"
+						iconSclass="z-icon-times"
+						style="margin-right: 5px;"
+		      			onClick="mailDetailPopup.close(); mailDetailPopup.invalidate();"
+		      			sclass="btn-light" />
+					<label value="@load(vm.mailSendSelected.subject)"
+					 	style="white-space: nowrap; font-weight: bold;" />
+					
+				</hbox>
+				<grid hflex="1">
+					<columns>
+						<column/>
+						<column align="right"/>
+					</columns>
+					<rows>
+						<row style="border: none;">
+							<cell>
+								<label value="@load(vm.mailSendSelected.modifAt) @converter(vm.dateTimeConverter)"
+									style="white-space: nowrap;"/>
+							</cell>
+							<cell>
+								<hlayout visible="@load(vm.mailSendSelected.success)">
+									<a sclass="big-icon"
+				               			iconSclass="z-icon-check-circle" 
+				               			style="color: green; margin-left: 5px;"
+				               			tooltiptext="${c:l('txt.ui.mail.SendSuccess')}" />								
+								</hlayout>
+			               		
+			               		<hlayout visible="@load(!vm.mailSendSelected.success)">
+				               		<a sclass="big-icon"
+				               			iconSclass="z-icon-exclamation-triangle" 
+				               			style="color: red; margin-left: 5px;"
+				               			tooltiptext="${c:l('txt.ui.mail.SendFailed')}"
+				               			popup="failedSendPopup_${vm.mailSendSelected.uuid}, position=after_end" />
+			               		</hlayout>
+							</cell>
+						</row>
+						<row>
+							<cell colspan="2">
+								<label value="${c:l('txt.ui.common.To')}: " />
+								<label value="@load(vm.mailSendSelected.to)"/>
+							</cell>
+						</row>
+					</rows>
+				</grid>
+				
+				<vbox hflex="1" style="border-top: 1px solid; padding: 10px;">
+					<html content="@load(vm.mailSendSelected.text)" 
+						hflex="1"/>
+				</vbox>
+			</vbox>
+		</popup>
 	</div>
 </zk>
