--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/message.zul
@@ -10,7 +10,7 @@
 		sclass="scb-view"
 		width="100%"
 		height="100%"
-		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.email.EmailDetailWinVM')"
+		viewModel="@id('vm') @init('com.jzaoralek.scb.ui.pages.email.MessageVM')"
 		validationMessages="@id('vmsgs')"
        	form="@id('fx') @load(vm) @save(vm, before='sendCmd')">
 		
@@ -199,7 +199,7 @@
 			        	<!-- Odeslane zpravy -->
 			        	<vbox>
 			        		<vbox hflex="1">
-					        	<hbox style="margin-left: 5px; margin-bottom: 10px;" hflex="1" >
+					        	<hbox style="margin-bottom: 10px;" hflex="1" >
 						        	<!-- Odstranit -->
 						        	<button onClick="@command('deleteMailSendSelectedCmd')"
 										tooltiptext="${c:l('txt.ui.common.Delete')}"
@@ -297,7 +297,6 @@
 									multiple="true"
 									checkmark="true"
 									nonselectableTags="*"
-									style="margin-right: 10px; min-width: 300px"
 									selectedItems="@bind(vm.mailSendSelectedList)"
 									emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 									class="listbox-400 mobile-inherit-width" >
@@ -323,19 +322,13 @@
 							        <template name="model">
 							            <listitem>
 							            	<listcell/>
-							            	<listcell>
+							            	<listcell onClick="@command('mailDetailOpenCmd', item=each)">
 							            		<vlayout>
-							            			<label value="${each.to}" 
-							            				style="font-size: 12px; text-decoration: underline !important"
-							            				onClick="@command('mailDetailOpenCmd', item=each)" 
-							            				popup="mailDetailPopup, position=after_start" />
-							            			<label value="${each.subject}" 
-							            				style="font-size: 12px; text-decoration: underline !important"
-							            				onClick="@command('mailDetailOpenCmd', item=each)" 
-							            				popup="mailDetailPopup, position=after_start"/>
+							            			<mail-send-recipient-template mailSend="${each}" />
+							            			<label value="${each.subject}" style="font-size: 12px; margin-left: 5px;" />
 							            		</vlayout>
 							            	</listcell>
-							            	<listcell>
+							            	<listcell onClick="@command('mailDetailOpenCmd', item=each)">
 							            		<hlayout>
 							            			<vlayout width="60px" style="margin-right: 5px;">
 								            			<label value="@load(each.modifAt) @converter(vm.dateTimeConverter)" 
@@ -373,64 +366,5 @@
 			    </tabpanels>
 			</tabbox>
 		</vlayout>
-		<!-- Mail detail popup  -->
-		<popup hflex="1"
-			vflex="1"
-			style="overflow:auto; max-width: 795px; max-height: 500px;"
-			id="mailDetailPopup" >
-			<vbox hflex="1" align="start">
-				<hbox hflex="1" pack="start" align="center" style="background: #F0F3F5; padding: 5px;">
-					<button tooltiptext="${c:l('txt.ui.ToClose')}"
-						iconSclass="z-icon-times"
-						style="margin-right: 5px; height: 33px;"
-		      			onClick="mailDetailPopup.close(); mailDetailPopup.invalidate();"
-		      			sclass="btn-light" />
-					<label value="@load(vm.mailSendSelected.subject)"
-					 	style="white-space: nowrap; font-weight: bold;" />
-					
-				</hbox>
-				<grid hflex="1">
-					<columns>
-						<column/>
-						<column align="right"/>
-					</columns>
-					<rows>
-						<row style="border: none;">
-							<cell>
-								<label value="@load(vm.mailSendSelected.modifAt) @converter(vm.dateTimeConverter)"
-									style="white-space: nowrap;"/>
-							</cell>
-							<cell>
-								<hlayout visible="@load(vm.mailSendSelected.success)">
-									<a sclass="big-icon"
-				               			iconSclass="z-icon-check-circle" 
-				               			style="color: green; margin-left: 5px;"
-				               			tooltiptext="${c:l('txt.ui.mail.SendSuccess')}" />								
-								</hlayout>
-			               		
-			               		<hlayout visible="@load(!vm.mailSendSelected.success)">
-				               		<a sclass="big-icon"
-				               			iconSclass="z-icon-exclamation-triangle" 
-				               			style="color: red; margin-left: 5px;"
-				               			tooltiptext="${c:l('txt.ui.mail.SendFailed')}"
-				               			popup="failedSendPopup_${vm.mailSendSelected.uuid}, position=after_end" />
-			               		</hlayout>
-							</cell>
-						</row>
-						<row>
-							<cell colspan="2">
-								<label value="${c:l('txt.ui.common.To')}: " />
-								<label value="@load(vm.mailSendSelected.to)"/>
-							</cell>
-						</row>
-					</rows>
-				</grid>
-				
-				<vbox hflex="1" style="border-top: 1px solid; padding: 10px;">
-					<html content="@load(vm.mailSendSelected.text)" 
-						hflex="1"/>
-				</vbox>
-			</vbox>
-		</popup>
 	</div>
 </zk>
