--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/course-appl-file-config-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/course-appl-file-config-window.zul
@@ -53,7 +53,7 @@
 						</vbox>
 					</cell>		
 				</row>
-				<row>
+				<row visible="@load(vm.item.pageTextContext)">
 					<cell>
 						<vbox hflex="1" vflex="1">
 							<label value="${c:l('txt.ui.common.PageText')}"/>
