course application file admin frontend, file download

--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/course-appl-file-config-window.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/course-appl-file-config-window.zul
@@ -94,7 +94,10 @@
 				</row>
 				<row>
 					<cell>
-						file upload
+						<a label="@load(vm.item.attachment.name)" 
+							onClick="@command('downloadFileCmd')"
+							iconSclass="z-icon-download"
+							visible="@load(vm.attachmentPresent)" />
 					</cell>
 				</row>
 			</rows>
